Initial README text

--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-WRITEME
+"I suppose you're looking to drill the next Spindletop," he said,
+hanging his hat on a hook by the office door.  "I don't know if you'll
+find it out here in West Texas, but hell.  We'll do anything honest to
+make a living."
+
+=====
+
+Welcome to Wildcatting!  The year is 1902, and you've traveled to West
+Texas from back East to secure your name as an oil speculator.  You
+have hired a top-notch surveying team and are prepared to go deeply in
+debt to make the find of the century!
