the old man is a surveyor

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-"I suppose you're looking to drill the next Spindletop," he said,
+"I suppose you're looking to drill the next Spindletop," the surveyor said,
 hanging his hat on a hook by the office door.  "I don't know if you'll
 find it out here in West Texas, but hell.  We'll do anything honest to
 make a living."
