--- a/README
+++ b/README
@@ -12,23 +12,23 @@ Texas from back East to secure your name as an oil speculator.  You
 have hired a top-notch surveying team and are prepared to go deeply in
 debt to make the find of the century!
 
-Do you believe in the drillbit?  To win at Wildcatting, you'll need to 
-painstakingly analyze surveyor's reports to determine if oil lurks somewhere
-beneath the crusty soil.  And if you decide to drill, you better believe, 
-because for each foot you drill, you'll be paying and paying big.  How deep
-are you willing to go?
+To win at Wildcatting, you'll need to painstakingly analyze surveyor's 
+reportsto determine if oil lurks somewhere beneath the crusty soil.  And 
+if you decide to drill, you better believe, because for each foot you 
+drill, you'll be paying and paying big.  How deep are you willing to go?
 
-Even if you find oil down there, don't think the government isn't going to 
-notice.  For each week you keep your well operational, you'll be paying 
-through the roof just to keep the taxman off your back.  And just because a
-well is producing doesn't mean it will continue to do so.  Closely monitor
-oil market price trends and well output, and sell at just the right moment 
-or even your best well will drain YOU dry.
+Even if you find oil under the surface, don't think the government isn't 
+going to notice.  For each week you keep your well operational, you'll be 
+paying through the roof just to keep the taxman off your back.  And just 
+because a well is producing doesn't mean it will continue to do so.  
+Closely monitor oil market price trends and well output.  Sell at just 
+the right moment or even your best well will drain YOU dry.
 
-Still interested?  The life of a wildcatter isn't easy, but the payoffs can
-be big.  If your well output outstrips the extortionary tax rate, and you get
-a little luck in the oil market, you can get healthy real quick playing 
-Wildcatting.
+Do you believe in the drillbit?  The life of a wildcatter isn't easy, but 
+the payoffs can be big.  If rising demand manages to offset the relentless
+increasing supply of abundant oil from other wells, and if your well 
+output manages to outstrip the extortionary tax rate, you can get healthy
+real quick playing Wildcatting.
 
 ========
 Gameplay
