--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -5,3 +5,4 @@
   * Better notification that a user's turn has started
   * Python 2.4 support?
   * Star the winning player
+  * Make final weekly summary say Final Report or similar
