Edited wiki page through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -2,12 +2,9 @@
 
 == Version 1.2 ==
 
-1.2 will be a bug fix release, plus a couple of features:
+1.2 will be a bug fix release.
 
-  * The next player can go as soon as you've surveyed a site.
-  * Standalone (hotseat) mode.
-
-And these bugs:
+These bugs:
 http://code.google.com/p/wildcatting/issues/list?q=label:Milestone-Release1.2&can=1
 
 == Version 1.1 ==
