--- a/wiki/Gameplay.wiki
+++ b/wiki/Gameplay.wiki
@@ -31,6 +31,8 @@ to a site using the arrow keys and press space to survey, then decide
 if you want to drill.  You cannot survey a site that has already been
 surveyed.
 
+Use the space bar to cycle between views of the oil field.  You get probability, drilling costs, and oil depth.
+
 ==Surveyor's Report==
 
 http://wildcatting.googlecode.com/files/surveyors-report.png
